--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,7 +1,15 @@
 <% include ./partials/header %>
 
-<h1>
-	Marshall Pritchett's Portfolio
-</h1>
+<div class="container">
+	
+
+	<h1>
+		Marshall Pritchett's Portfolio
+	</h1>
+
+	<a class="btn btn-info" href="/projects">See All Projects</a>
+
+</div>
+
 
 <% include ./partials/footer %>
